feat: compile_commands.json implemented

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,14 @@
 cmake_minimum_required(VERSION 3.22.1)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 project(clang-ci)
 
 set(CMAKE_CXX_STANDARD 14)
 
+add_subdirectory(lib)
 add_executable(clang-ci src/main.cpp)
+target_link_libraries(${PROJECT_NAME} Library)
+
+target_include_directories( ${PROJECT_NAME} PUBLIC lib/)
 
 set_target_properties( ${PROJECT_NAME}
     PROPERTIES
@@ -11,3 +16,4 @@ set_target_properties( ${PROJECT_NAME}
     LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
 )
+
