--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(clang-ci)
 set(CMAKE_CXX_STANDARD 14)
 
 add_subdirectory(lib)
-add_executable(clang-ci src/main.cpp)
+add_executable(${PROJECT_NAME} src/main.cpp)
 target_link_libraries(${PROJECT_NAME} Library)
 
 target_include_directories( ${PROJECT_NAME} PUBLIC lib/)
